--- a/BidReviewCustomisations/Resources/template_resources.resx
+++ b/BidReviewCustomisations/Resources/template_resources.resx
@@ -4599,6 +4599,14 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
     <value>Status</value>
     <comment>'Ccrm_opportunityapproval' : displayname for Attribute 'statuscode' on Entity</comment>
   </data>
+  <data name="1:label,Bid Review0e8fb0e7-40e3-4540-ba93-54268a85a711" xml:space="preserve">
+    <value>New Section</value>
+    <comment>'Bid Review' : label for section in Entity FormXml ID: '0e8fb0e7-40e3-4540-ba93-54268a85a711'</comment>
+  </data>
+  <data name="1:label,Bid Reviewc1f0aeb8-d737-49b0-b535-d99b06625ae0" xml:space="preserve">
+    <value>Navigation</value>
+    <comment>'Bid Review' : label for section in Entity FormXml ID: 'c1f0aeb8-d737-49b0-b535-d99b06625ae0'</comment>
+  </data>
   <data name="1:label,Bid Review{000c7783-8e31-65d6-c5a7-b9120c569e10}" xml:space="preserve">
     <value>Bid Review Supporting Documents</value>
     <comment>'Bid Review' : label for section in Entity FormXml ID: '{000c7783-8e31-65d6-c5a7-b9120c569e10}'</comment>
@@ -4751,6 +4759,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
     <value>5. Have there been past PI/litigation issues with this client?</value>
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{0d5824d9-53ae-09d4-1268-32ca717722b3}'</comment>
   </data>
+  <data name="1:label,Bid Review{0e22c5fd-c9eb-4722-8da2-0c45ac7f8bfd}" xml:space="preserve">
+    <value />
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{0e22c5fd-c9eb-4722-8da2-0c45ac7f8bfd}'</comment>
+  </data>
   <data name="1:label,Bid Review{0ec87359-ad42-0a98-6b38-62a03eadd706}" xml:space="preserve">
     <value />
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{0ec87359-ad42-0a98-6b38-62a03eadd706}'</comment>
@@ -4798,6 +4810,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
   <data name="1:label,Bid Review{149163a5-5791-a4db-80d3-42545b5aa2db}" xml:space="preserve">
     <value />
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{149163a5-5791-a4db-80d3-42545b5aa2db}'</comment>
+  </data>
+  <data name="1:label,Bid Review{1514e0ab-d0cb-7ed4-66eb-8b6a59da90c1}" xml:space="preserve">
+    <value />
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{1514e0ab-d0cb-7ed4-66eb-8b6a59da90c1}'</comment>
   </data>
   <data name="1:label,Bid Review{1537c090-a159-90d4-6cc0-b9239c0db5d8}" xml:space="preserve">
     <value />
@@ -4859,9 +4875,9 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
     <value>Section</value>
     <comment>'Bid Review' : label for section in Entity FormXml ID: '{1867ce47-a0c0-0086-50b3-26399ac28a72}'</comment>
   </data>
-  <data name="1:label,Bid Review{188b35d8-e804-5d90-76a6-81acc6a91c67}" xml:space="preserve">
-    <value>Section</value>
-    <comment>'Bid Review' : label for section in Entity FormXml ID: '{188b35d8-e804-5d90-76a6-81acc6a91c67}'</comment>
+  <data name="1:label,Bid Review{189934de-2a29-1485-6e78-554410769802}" xml:space="preserve">
+    <value />
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{189934de-2a29-1485-6e78-554410769802}'</comment>
   </data>
   <data name="1:label,Bid Review{18d8c6ee-0937-2869-b095-4a85de259cd5}" xml:space="preserve">
     <value>4. Has the estimate of required resources been checked and if so by whom?</value>
@@ -4930,6 +4946,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
   <data name="1:label,Bid Review{1ddc652a-1b0d-30ca-4466-d9b6de5b2e25}" xml:space="preserve">
     <value />
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{1ddc652a-1b0d-30ca-4466-d9b6de5b2e25}'</comment>
+  </data>
+  <data name="1:label,Bid Review{1dedce8c-b407-2656-9102-23b195464b9a}" xml:space="preserve">
+    <value />
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{1dedce8c-b407-2656-9102-23b195464b9a}'</comment>
   </data>
   <data name="1:label,Bid Review{20569a02-8953-9334-aed5-218891c60a5c}" xml:space="preserve">
     <value />
@@ -5070,6 +5090,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
   <data name="1:label,Bid Review{2a908b93-9950-783e-1051-971e8ee18376}" xml:space="preserve">
     <value />
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{2a908b93-9950-783e-1051-971e8ee18376}'</comment>
+  </data>
+  <data name="1:label,Bid Review{2aa7e1fc-34fe-4007-9934-8e43dd0753f2}" xml:space="preserve">
+    <value />
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{2aa7e1fc-34fe-4007-9934-8e43dd0753f2}'</comment>
   </data>
   <data name="1:label,Bid Review{2b7dc4eb-0b52-24d9-b9e3-81c0779006e6}" xml:space="preserve">
     <value />
@@ -5503,6 +5527,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
     <value>Meeting Location:</value>
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{5c7332d8-2e83-4d09-a9d0-8885e0eb0b48}'</comment>
   </data>
+  <data name="1:label,Bid Review{5c98877e-cfca-468a-a616-cf25744ca75b}" xml:space="preserve">
+    <value />
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{5c98877e-cfca-468a-a616-cf25744ca75b}'</comment>
+  </data>
   <data name="1:label,Bid Review{5cd277cc-00be-b91b-8145-726d3e2cdd04}" xml:space="preserve">
     <value>sectionH2_data_1d_value</value>
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{5cd277cc-00be-b91b-8145-726d3e2cdd04}'</comment>
@@ -5554,6 +5582,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
   <data name="1:label,Bid Review{61ea604b-cc79-c3a5-bd25-16c01c7e8d1e}" xml:space="preserve">
     <value />
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{61ea604b-cc79-c3a5-bd25-16c01c7e8d1e}'</comment>
+  </data>
+  <data name="1:label,Bid Review{621d29cc-c568-4952-ad2b-f2c192c98861}" xml:space="preserve">
+    <value>Bid Title</value>
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{621d29cc-c568-4952-ad2b-f2c192c98861}'</comment>
   </data>
   <data name="1:label,Bid Review{625d3cba-8518-eae1-2671-99a59053744b}" xml:space="preserve">
     <value>3. Additional notes, reviewers comments, actions required</value>
@@ -5614,6 +5646,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
   <data name="1:label,Bid Review{66643aa9-c116-4734-c85a-7be6072999b1}" xml:space="preserve">
     <value>sectiond_question5a</value>
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{66643aa9-c116-4734-c85a-7be6072999b1}'</comment>
+  </data>
+  <data name="1:label,Bid Review{66a7f0f8-f72d-4d8f-8778-c5c18c0c05e0}" xml:space="preserve">
+    <value />
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{66a7f0f8-f72d-4d8f-8778-c5c18c0c05e0}'</comment>
   </data>
   <data name="1:label,Bid Review{671687ee-7919-a4dd-a8a0-d0016998da3b}" xml:space="preserve">
     <value />
@@ -5911,6 +5947,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
     <value>13b</value>
     <comment>'Bid Review' : label for section in Entity FormXml ID: '{7d5274e1-8158-9054-ce47-943c88324833}'</comment>
   </data>
+  <data name="1:label,Bid Review{7d62c024-5c45-4666-a67d-33b19524d884}" xml:space="preserve">
+    <value />
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{7d62c024-5c45-4666-a67d-33b19524d884}'</comment>
+  </data>
   <data name="1:label,Bid Review{7d7449ac-816c-55ec-000a-6d791bc46e3c}" xml:space="preserve">
     <value>• How will you ensure the data security, back-up, and data ownership implications of the data-storag</value>
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{7d7449ac-816c-55ec-000a-6d791bc46e3c}'</comment>
@@ -6138,6 +6178,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
   <data name="1:label,Bid Review{8da36b03-1cb9-2847-bd40-7eb602c8ade9}" xml:space="preserve">
     <value>sectiond_question5a</value>
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{8da36b03-1cb9-2847-bd40-7eb602c8ade9}'</comment>
+  </data>
+  <data name="1:label,Bid Review{8e0bc529-19a1-486d-98ca-41c2cea709dc}" xml:space="preserve">
+    <value />
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{8e0bc529-19a1-486d-98ca-41c2cea709dc}'</comment>
   </data>
   <data name="1:label,Bid Review{8e1308e0-87e4-23a5-9ee4-1d433b48a6e1}" xml:space="preserve">
     <value>3b</value>
@@ -6607,6 +6651,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
     <value>hsneedsconsidered_yesno</value>
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{bc00c9ce-ae54-ea96-2640-855196b424c0}'</comment>
   </data>
+  <data name="1:label,Bid Review{bd690de6-c053-46f1-a71b-2ad121f02ff2}" xml:space="preserve">
+    <value />
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{bd690de6-c053-46f1-a71b-2ad121f02ff2}'</comment>
+  </data>
   <data name="1:label,Bid Review{bd771b32-e922-b516-9e6a-697686b9585d}" xml:space="preserve">
     <value>15. Additional notes, reviewers comments, actions required</value>
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{bd771b32-e922-b516-9e6a-697686b9585d}'</comment>
@@ -6667,6 +6715,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
     <value>8. Additional notes, reviewers comments, actions required</value>
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{c5454733-1e47-9728-3427-10e597887443}'</comment>
   </data>
+  <data name="1:label,Bid Review{c57a47c2-cca3-c2d0-27db-116d664a54cc}" xml:space="preserve">
+    <value />
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{c57a47c2-cca3-c2d0-27db-116d664a54cc}'</comment>
+  </data>
   <data name="1:label,Bid Review{c6688d3d-08a7-a3b6-cd34-bb5ab1284655}" xml:space="preserve">
     <value>iii) External sub-consultants, sub-contractors or suppliers - by formal contract?</value>
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{c6688d3d-08a7-a3b6-cd34-bb5ab1284655}'</comment>
@@ -6722,6 +6774,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
   <data name="1:label,Bid Review{cbcc416c-801a-e97e-e05c-a8d10120d89c}" xml:space="preserve">
     <value>Meeting Date:</value>
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{cbcc416c-801a-e97e-e05c-a8d10120d89c}'</comment>
+  </data>
+  <data name="1:label,Bid Review{cc379aac-9eb4-e8c2-1b86-5a4bdb786c16}" xml:space="preserve">
+    <value>Navigation</value>
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{cc379aac-9eb4-e8c2-1b86-5a4bdb786c16}'</comment>
   </data>
   <data name="1:label,Bid Review{cc4e0389-437b-7c66-5607-b72809d98427}" xml:space="preserve">
     <value>sectionc_data_6b_multi</value>
@@ -6874,6 +6930,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
   <data name="1:label,Bid Review{da4b038d-0a95-8d92-937d-a02935a7c5a5}" xml:space="preserve">
     <value>5. Can the design be completed before the project proceeds to construction?</value>
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{da4b038d-0a95-8d92-937d-a02935a7c5a5}'</comment>
+  </data>
+  <data name="1:label,Bid Review{dab1522c-d935-4955-b859-e137234af231}" xml:space="preserve">
+    <value />
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{dab1522c-d935-4955-b859-e137234af231}'</comment>
   </data>
   <data name="1:label,Bid Review{dab2cc3a-ede6-2421-1715-191879454b45}" xml:space="preserve">
     <value />
@@ -7090,6 +7150,10 @@ Typical high risk factors: Unfamiliarity with the client's business. No evidence
   <data name="1:label,Bid Review{ede59180-8165-1a72-1de7-32665724bdee}" xml:space="preserve">
     <value>sectionH2_question_1a</value>
     <comment>'Bid Review' : label for cell in Entity FormXml ID: '{ede59180-8165-1a72-1de7-32665724bdee}'</comment>
+  </data>
+  <data name="1:label,Bid Review{ee185dbd-e22a-45a0-8db5-6cc0b8e7eb44}" xml:space="preserve">
+    <value />
+    <comment>'Bid Review' : label for cell in Entity FormXml ID: '{ee185dbd-e22a-45a0-8db5-6cc0b8e7eb44}'</comment>
   </data>
   <data name="1:label,Bid Review{eeaa3db8-50e6-35ba-5ab7-c2191a4a6d51}" xml:space="preserve">
     <value>sectionb_data_8</value>
